covert number to string ipython

--- a/M10515029_HW1.ipynb
+++ b/M10515029_HW1.ipynb
@@ -24,6 +24,7 @@
    "source": [
     "# Build a classification task using 1806 informative features\n",
     "data = pd.read_csv(\"./Microsoft-Malware-Challenge/Dataset/train/LargeTrain.csv\")\n",
+    "featureName = data.columns\n",
     "y = data.pop('Class')\n",
     "X = data"
    ]
@@ -40,27 +41,27 @@
      "output_type": "stream",
      "text": [
       "Importance feature\n",
-      "1. feature 306 (0.013411)\n",
-      "2. feature 117 (0.011097)\n",
-      "3. feature 265 (0.008002)\n",
-      "4. feature 228 (0.007035)\n",
-      "5. feature 1638 (0.006078)\n",
-      "6. feature 95 (0.006050)\n",
-      "7. feature 1497 (0.005857)\n",
-      "8. feature 740 (0.005746)\n",
-      "9. feature 877 (0.005639)\n",
-      "10. feature 314 (0.005220)\n",
+      "1. feature section_names_.tls (0.013411)\n",
+      "2. feature ent_q_diffs_mean (0.011097)\n",
+      "3. feature ent_p_7 (0.008002)\n",
+      "4. feature ent_q_diff_diffs_2_max (0.007035)\n",
+      "5. feature Img3 (0.006078)\n",
+      "6. feature misc1_unableto (0.006050)\n",
+      "7. feature dw_por (0.005857)\n",
+      "8. feature TlsAlloc (0.005746)\n",
+      "9. feature LoadLibraryW (0.005639)\n",
+      "10. feature Unknown_Sections_lines_por (0.005220)\n",
       "Nonimportance feature\n",
-      "1. feature 345 (0.000000)\n",
-      "2. feature 458 (0.000000)\n",
-      "3. feature 78 (0.000000)\n",
-      "4. feature 70 (0.000000)\n",
-      "5. feature 449 (0.000000)\n",
-      "6. feature 412 (0.000000)\n",
-      "7. feature 1049 (0.000000)\n",
-      "8. feature 1475 (0.000000)\n",
-      "9. feature 335 (0.000000)\n",
-      "10. feature 981 (0.000000)\n"
+      "1. feature wvsprintfA (0.000000)\n",
+      "2. feature __vbaRecAnsiToUni (0.000000)\n",
+      "3. feature misc_installdir (0.000000)\n",
+      "4. feature ---Seperator (0.000000)\n",
+      "5. feature GetSaveFileNameA (0.000000)\n",
+      "6. feature lstrcmpiW (0.000000)\n",
+      "7. feature __vbaAryMove (0.000000)\n",
+      "8. feature fdivp (0.000000)\n",
+      "9. feature GetWindowTextLengthA (0.000000)\n",
+      "10. feature SetDIBColorTable (0.000000)\n"
      ]
     }
    ],
@@ -77,11 +78,11 @@
     "num = len(indices) - 1\n",
     "print(\"Importance feature\")\n",
     "for i in xrange(10):\n",
-    "    print (\"%d. feature %d (%f)\" % (i + 1, indices[i], importances[indices[i]]))\n",
+    "    print (\"%d. feature %s (%f)\" % (i + 1, featureName[indices[i]-1], importances[indices[i]]))\n",
     "\n",
     "print(\"Nonimportance feature\")\n",
     "for i in xrange(10):\n",
-    "    print (\"%d. feature %d (%f)\" % (i + 1, indices[num-i], importances[indices[num-i]]))\n"
+    "    print (\"%d. feature %s (%f)\" % (i + 1, featureName[indices[num-i]-1], importances[indices[num-i]]))\n"
    ]
   },
   {
